--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>东北热</title>
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body>
-
+    <ul>
+        <li>亚洲</li>
+        <li>欧美</li>
+        <li>日韩</li>
+        <li>LIVE</li>
+    </ul>
 </body>
 
 </html>
