--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li>欧美</li>
         <li>日韩</li>
         <li>LIVE</li>
-        <li>短视频</li>
+        <li>短视频（修复bug）</li>
     </ul>
 </body>
 
